committing Checks on Requests
