# src/app/services/models/registration-request.ts
@@ -3,10 +3,10 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export interface RegistrationRequest {
+  confirmPassword?: string;
   email: string;
   firstname: string;
   lastname: string;
   password: string;
-  confirmPassword?: string;
   phoneNumber: Array<string>;
 }
